[package]
name = "shine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Shine"
path = "src/main.rs"

[dependencies]
libc = "0.2.110"
handlebars = "6.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
axum = { version = "0.7.9", features = ["http2", "multipart", "ws"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
string-builder = { version = "0.2.0" }
html-escape = "0.2.13"
xml-rs = "0.8.24"
cxx = "1.0.133"

[build-dependencies]
cxx-build = "1.0.133"